--- a/live_test/CMakeLists.txt
+++ b/live_test/CMakeLists.txt
@@ -1,8 +1,6 @@
 cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
 
-set(CMAKE_CXX_COMPILER "ccache")
-
-project(footstep_viz)
+project(live_test)
 
 find_package(PCL 1.3 REQUIRED)
 
@@ -10,5 +8,5 @@ include_directories(${PCL_INCLUDE_DIRS})
 link_directories(${PCL_LIBRARY_DIRS})
 add_definitions(${PCL_DEFINITIONS})
 
-add_executable (footstep_viz footstep_visualizer.cpp main.cpp)
-target_link_libraries (footstep_viz ${PCL_LIBRARIES})
+add_executable (live_test main.cpp)
+target_link_libraries (live_test ${PCL_LIBRARIES})
