--- a/pcl_path_online_cb/CMakeLists.txt
+++ b/pcl_path_online_cb/CMakeLists.txt
@@ -8,5 +8,7 @@ include_directories(${PCL_INCLUDE_DIRS})
 link_directories(${PCL_LIBRARY_DIRS})
 add_definitions(${PCL_DEFINITIONS})
 
+set(CMAKE_CXX_FLAGS "-g")
+
 add_executable (pcl_path_online_cb footstep_visualizer.cpp demo.c pcl_path_online_cb.cpp)
 target_link_libraries (pcl_path_online_cb ${PCL_LIBRARIES})
